--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ NEXT_PUBLIC_ID="homework-tracker"
 VAPID_EMAIL="<Your Email Address>"
 NEXT_PUBLIC_VAPID_PUBKEY="<Your VAPID Public Key>"
 VAPID_PRIVKEY="<Your VAPID Private Key>"
+NEXT_PUBLIC_UPLOAD_LIMIT_MIB=128
