--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,8 @@ VAPID_EMAIL="<Your Email Address>"
 NEXT_PUBLIC_VAPID_PUBKEY="<Your VAPID Public Key>"
 VAPID_PRIVKEY="<Your VAPID Private Key>"
 NEXT_PUBLIC_UPLOAD_LIMIT_MIB=128
+COMCIGAN_SCHOOL=
+COMCIGAN_GRADE=
+COMCIGAN_CLASSNUM=
+MEAL_ATPT_OFCDC_SC_CODE=
+MEAL_SD_SCHUL_CODE=
