--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@simplewebauthn/types": "^10.0.0",
     "@types/mime-types": "^2.1.4",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "comcigan.js": "^1.1.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "mime-types": "^2.1.35",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "usehooks-ts": "^3.1.0",
     "web-push": "^3.6.7"
   },
