--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
     "sharp": "^0.33.4",
     "usehooks-ts": "^3.1.0",
     "web-push": "^3.6.7"
@@ -43,5 +45,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
